--- a/AntennaWpfGUI/MainWindow.xaml
+++ b/AntennaWpfGUI/MainWindow.xaml
@@ -4,7 +4,8 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" mc:Ignorable="d"
         xmlns:local="clr-namespace:AntennaWpfGUI"
-        xmlns:oxy="clr-namespace:OxyPlot.Wpf;assembly=OxyPlot.Wpf"
+        xmlns:oxy="clr-namespace:OxyPlot.Wpf;assembly=OxyPlot.Wpf" 
+
         Title="Окно!"
         Height="350" Width="525">
     <Window.DataContext>
@@ -35,7 +36,14 @@
                              Text="{Binding d, StringFormat={}{0:0.0#}}"/>
                     <Slider Minimum="0.1" Maximum="1" Value="{Binding d}" 
                             Width="300" SmallChange="0.05" LargeChange="0.1"/>
-                </StackPanel>   
+                </StackPanel>
+                <StackPanel Orientation="Horizontal" Margin="5,5">
+                    <TextBlock Text="Угол отклонения луча"/>
+                    <TextBox Width="70" Margin="10,0,5,0" 
+                             Text="{Binding Th0, StringFormat={}{0:0.0#}}"/>
+                    <Slider Minimum="-30" Maximum="30" Value="{Binding Th0}" 
+                            Width="300" SmallChange="0.5" LargeChange="1"/>  
+                </StackPanel>
                 <StackPanel Orientation="Horizontal">
                     <TextBlock Text="Размер апертуры"/>
                     <TextBlock Text="{Binding Antenna.Length, StringFormat='{}{0:0.###} m'}" Margin="2,0"/>
@@ -48,41 +56,17 @@
                     <oxy:Plot>
                         <oxy:Plot.Axes>
                             <oxy:LinearAxis Position="Bottom" Title="Angle"/>
-                            <!--<oxy:LinearAxis Position="Left" Title="20Lg|F(th)|"/>--> 
-                            <oxy:LogarithmicAxis Position="Left" Title="|F(th)|" AbsoluteMinimum="0.0001"/>
+                            <oxy:LinearAxis Position="Left" Title="20Lg|F(th)|" AbsoluteMinimum="-20"/> 
+                            <!--<oxy:LogarithmicAxis Position="Left" Title="|F(th)|" AbsoluteMinimum="0.0001"/>-->
                         </oxy:Plot.Axes>
                         <oxy:Plot.Series>
                             <oxy:LineSeries ItemsSource="{Binding Pattern}"
                                             DataFieldX="Angle"
-                                            DataFieldY="Value"
+                                            DataFieldY="Value_in_db"
                                             Color="Red"
                                             StrokeThickness="2"/>
                         </oxy:Plot.Series>
                     </oxy:Plot>
-                </TabItem>
-                <TabItem Header="Список">
-                    <ListView ItemsSource="{Binding Pattern}">
-                        <ListView.ItemTemplate>
-                            <DataTemplate DataType="local:PatternValue">
-                                <StackPanel Orientation="Horizontal">
-                                    <TextBlock Text="Angle:"/>
-                                    <TextBlock Text="{Binding Angle}" Margin="2,0"/>
-                                    <TextBlock Text="Value"/>
-                                    <TextBlock Text="{Binding Value}" Margin="2,0"/>
-                                </StackPanel>    
-                            </DataTemplate>
-                        </ListView.ItemTemplate>
-                    </ListView>
-                </TabItem>
-                <TabItem Header="Таблица">
-                    <DataGrid ItemsSource="{Binding Pattern}" AutoGenerateColumns="False"
-                              HorizontalGridLinesBrush="{x:Null}">
-                        <DataGrid.Columns>
-                            <DataGridTextColumn Binding="{Binding Angle}" Header="Угол"/>
-                            <DataGridTextColumn Binding="{Binding Value}" Header="Значение"/>
-                            <DataGridTextColumn Binding="{Binding Value_in_db}" Header="Значение [дБ]"/>
-                        </DataGrid.Columns>
-                    </DataGrid>
                 </TabItem>
             </TabControl>
         </Grid>
